fix: Refactor styles in App.css and App.jsx for improved UI consistency and readability

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-body{
+body {
     background: #EEAECA;
     background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
     margin: 0%;
@@ -9,56 +9,67 @@ body{
     box-sizing: border-box;
     margin: 10px;
     color: #F8F9FA;
-    
+
 }
 
-h4,h3{
-    
+h1 {
+    color: #2a3d5c;
+}
+
+h4,
+h3 {
+    color: #2a3d5c;
     font-weight: bold;
     font-size: large;
     margin: 10px;
 }
 
-p,ol,ul{
+p,
+ol,
+ul {
     font-size: medium;
     margin: 10px;
-    color: rgb(223, 223, 223);
-}
-strong{
-    color: rgb(255, 255, 255);
+    color: #0f172a;
 }
 
-pre code{
-    font-size:80%;
-    width: 90%;
+
+pre code {
+    font-size: 80%;
+    display: flex;
+    width: 100%;
+
 }
 
-pre{
+pre {
     background: radial-gradient(circle at 30% 30%, #702963, #1e3a8a);
-    /* color: rgb(204, 204, 204); */
     color: #F1F5F9;
     padding: 5px 10px;
     border-radius: 15px;
-    
+    width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: pre-wrap;
+    word-break: break-all;
+    font-family: 'Courier New', Courier, monospace;
+
 }
 
 /* width */
 ::-webkit-scrollbar {
-  width: 2px;
+    width: 1px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #000000;
+    background: #000000;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+    background: #888;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+    background: #555;
 }
-
